--- a/style.sass
+++ b/style.sass
@@ -1,11 +1,21 @@
-$color1: #383838;
-$color2: #FAF5F5;
-$fontFamily1: 'Times New Roman', Times, serif, sans-serif;
+/* Variables */
+$testImg: 'images/test.png'
+$color1: #383838
+$color2: #FAF5F5
+$fontFamily1: 'Times New Roman', Times, serif, sans-serif
 
 /*For phones*/
 body
 	font-family: $fontFamily1
 	line-height: 1.6
+  margin: 0
+  padding: 0
+  height: 100vh
+  overflow: hidden
+  background-size: cover
+  display: flex
+  justify-content: center
+  align-items: center
 
 main
 	display: flex
@@ -13,13 +23,28 @@ main
 	height: 100vh
 	scroll-snap-type: y mandatory
 
-.backgroundImage
-    background-image: url("images/test.png")
-    background-position: center center
-    background-repeat: no-repeat
-    background-size: contain
-    width: 100vw
-    height: 100vh
+.imageContainer
+  position: relative
+  width: 100%
+  height: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+
+  .overlayButton
+    position: absolute
+    padding: 1rem 2rem
+    background-color: $color1;
+    color: $color2
+    border: none
+    border-radius: 0.2rem
+    font-size: 1.2rem
+    text-transform: uppercase
+    transition: background-color 0.3s ease
+
+    &:hover
+      background-color: darken($color1, 10%)
+
 
 
 /*For Tablet*/
