--- a/style.css
+++ b/style.css
@@ -57,18 +57,20 @@
   /* section container*/
   .centered-box {
     height: 100%;
+    width: auto;
     background-color: var(--colour7);
     text-align: center;
     color: var(--white-text);
   }
 
   /*question text*/
-  .centered-box h1 {
+  h1 {
     position: absolute;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
+    padding: 5%;
     font-size: 3rem;
   }
 
@@ -89,22 +91,34 @@
     /*10% opacity white*/
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--white-text);
-    padding: 0.4rem 0.4rem;
+    padding: 0.2%;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.75rem;
     text-decoration: none;
     border: 0.4rem solid var(--white-text);
-    border-radius: 0.3rem;
+    /* border-radius: 0.3rem; */
     transition: transform 0.2s ease-in-out;
-    margin-top: 0.2rem;
+    /* margin-top: 2%; */
   }
 
-  /*vertical positioning for button options*/
+  /*for question option buttons*/
   .option1 {
-    bottom: 22%;
+    bottom: 25%;
+    /* width: 30%; */
   }
   .option2 {
+    bottom: 5%;
+    /* width: 30%; */
+  }
+
+  /*vertical positioning for homescreen button options*/
+  .top-button {
+    bottom: 22%;
+    /* width: 30%; */
+  }
+  .bottom-button {
     bottom: 10%;
+    /* width: 30%; */
   }
 
   /* .centered-box a:hover, a:active {
