code for foreground sprite and mirror result transition
also added temporary spritesheets for questions

--- a/style.css
+++ b/style.css
@@ -210,6 +210,16 @@
     to {top: 0; opacity: 0;}
   }
 
+  /*mon image on top of mirror*/
+  .mon-image {
+    position: absolute;
+    height: 320px;
+    width: 320px;
+    background: url("images/monsters/enfp.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+
   
   @media only screen and (min-width: 768px) {
     /*For Tablet*/
