--- a/style.css
+++ b/style.css
@@ -249,12 +249,12 @@
   }
 
   @media only screen and (min-width: 992px) {
-    /*iPad Pro, Laptops, Desktops, Monitors and up*/
+    /*iPad Pro, Laptops*/
 
     /*question text*/
     h1 {
       padding: 2%;
-      font-size: 2.2rem;
+      font-size: 2.4rem;
       line-height: 2.5rem;
     } 
 
@@ -263,14 +263,11 @@
     }
 
     /*option boxes*/
-    .button-container button {
+    .button-container button{
       background-color: rgba(255, 255, 255, 0.1);
       padding: 3%;
       font-size: 1.8rem;
       transition-duration: 0.5s;
-    }
-    .button-container button:hover {
-      background-color: rgba(255, 255, 255, 0.5);
     }
 
     .progress-sprite {
@@ -281,5 +278,23 @@
     /*foreground guy*/
     .foreground-sprite {
       transform: scale(0.8);
+    }
+  }
+
+  @media only screen and (min-width: 1200px) {
+    /*Desktops, Monitors and up*/
+
+    /*question text*/
+    h1 {
+      font-size: 2.2rem;
+    } 
+
+    /*option boxes*/
+    .button-container button{
+      font-size: 1.5rem;
+    }
+
+    .button-container button:hover {
+      background-color: rgba(255, 255, 255, 0.5);
     }
   }
