--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
   body {
     font-family: var(--main-font);
     line-height: 1.6;
-    overflow: hidden;
+    overflow: auto;
     height: 100%;
     background-color: var(--colour7);
   }
@@ -37,7 +37,8 @@
   main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 90vh;
+    margin-top: 5vh;
     scroll-snap-type: y mandatory;
   }
   
