--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@
     background: url("images/spritesheets/rabbitSpriteSheet.png");
     animation: fore-sprite 0.9s steps(2) infinite;
     transform: scale(0.4);
+    top: 40%;
+    left: 25%;
   }
 
   @keyframes fore-sprite {
@@ -248,6 +250,8 @@
     /*foreground guy*/
     .foreground-sprite {
       transform: scale(0.45);
+      top: 50%;
+      left: 35%;
     }
   }
 
@@ -287,6 +291,8 @@
     /*foreground guy*/
     .foreground-sprite {
       transform: scale(0.4);
+      top: 42%;
+      left: 27%;
     }
   }
 
@@ -314,5 +320,7 @@
     /*foreground guy*/
     .foreground-sprite {
       transform: scale(0.45);
+      top: 40%;
+      left: 25%;
     }
   }
